syntax = "proto3";

package user;

option go_package = "./proto;user";

service User {
	rpc SendSms(Request) returns (Response) {};
	rpc Register(RegisterRequest) returns (RegisterResponse) {};
}

message Request {
	string phone = 1;
	string imgCode = 2;
	string uuid = 3;
}

message Response {
	string errno = 1;
	string errmsg = 2;
}

message RegisterRequest {
	string mobile = 1;
	string password = 2;
	string sms_code = 3;
}

message RegisterResponse {
	string errno = 1;
	string errmsg = 2;
}