syntax = "proto3";

package getCaptcha;

option go_package = "./proto;getCaptcha";

service GetCaptcha {
	rpc Call(Request) returns (Response) {}
}

message Request {
	string uuid = 1;
}

// 返回的图片，是一个的字节流，使用切片保存这个字节流
message Response {
	bytes b = 1;
}